Spring Data Cassandra implementation

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,7 @@ spring:
   datasource:
     generate-unique-name: false
     name: tacocloud
+  cassandra:
+    keyspace-name: tacocloud
+    local-datacenter: datacenter1
+    schema-action: recreate
