--- a/pom.xml
+++ b/pom.xml
@@ -51,13 +51,20 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!-- Permite configurar una DB de Mongo embebida
+         <dependency>
+             <groupId>de.flapdoodle.embed</groupId>
+             <artifactId>de.flapdoodle.embed.mongo</artifactId>
+             <scope>test</scope>
+        </dependency>
+        -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
