--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,8 @@ spring:
   datasource:
     generate-unique-name: false
     name: tacocloud
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: test
